--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,9 +22,9 @@
 }
 
 :root {
-    --foreground-rgb: 0, 0, 30;
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 255, 255, 255;
+    --foreground: rgb(0, 0, 30);
     --background: rgb(235, 245, 250);
     --background-card: #accdec;
     --foreground-card: #0F2A43;
@@ -60,6 +60,7 @@
         --foreground-rgb: 255, 255, 255;
         --background-start-rgb: 0, 0, 0;
         --background-end-rgb: 0, 0, 0;
+        --foreground: rgb(235, 245, 250);
         --background: rgb(0, 0, 30);
         --background-card: #0F2A43;
         --foreground-card: #accdec;
