changed font to Pixelify Sans

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,5 +78,5 @@ body {
         transparent,
         rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
     background-color: var(--background);
-    font-family: Ubuntu;
+    font-family: Pixelify, Ubuntu;
 }
